--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,8 +1,56 @@
-@import "../node_modules/easyscss-kevin/components/functions.scss";
-@import "../node_modules/easyscss-kevin/components/components.scss";
+@import "../node_modules/easyscss-kevin/components/functions";
+@import "../node_modules/easyscss-kevin/components/components";
 @import "varibles";
 
 @media screen and (max-width:920px){
+
+    body{
+        background-color: rgb(245, 252, 255);
+    }
+
+    .moreProjects{
+
+    
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        a{
+            text-decoration: none;
+            color: white;
+            font-size: 1.2rem;
+            font-weight: bold;
+            border: 2px solid $color-primary-4;
+            background-color: $color-primary-4;
+            margin: 10px;
+            padding: 6px;
+            padding-left: 10px;
+            padding-right: 10px;
+            border-radius: 3px;
+        }
+    }
+    // custom rules
+
+    .title{
+        color: $color-primary-4;
+        text-align: center;
+        font-size: 4vmax;
+        padding: 0px;
+        margin: 10px;
+        text-transform: capitalize;
+
+        &::after{
+            
+            content: "";
+            background-color: rgb(0, 119, 255);
+            height: 3px;
+            width: 40px;
+            position:absolute;
+            transform: translateY(36px) translateX(-40px);
+        }
+    }
 
     App{
         width: 100%;
@@ -22,8 +70,15 @@
         logo{
             padding: 0px;
             h4{
-                margin: 10px;
-                color: $color-primary-4;
+                color: transparent;
+                margin: 5px;
+                background: linear-gradient(229deg, #f2659b, #02bcc6);
+                background: linear-gradient(229deg, #f2659b, #02bcc6);
+                background-size: 400% 400%;
+                animation:colorAnimate 6s ease infinite;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-size: 2rem;
             }
         }
     }
@@ -75,6 +130,8 @@
                     flex-direction: column;
                     a{
                         color: $main-text-color;
+                        font-size: 5vmax;
+                        text-decoration: none;
                     }
                 }
 
@@ -100,15 +157,24 @@
 
     // =========body
 
+    hr#separator{
+        color: red;
+        background-color: rgb(214, 217, 218);
+        border: 1px solid transparent;
+        width: 25%;
+        height: .5px;
+    }
+
     section.body{
         display: grid;
         grid-gap: 2px;
+        margin-bottom: 10vh;
 
         contentCard.card{
             margin: 5px;
             @include contentCard($color-primary-4);
             button{
-                @include button($main-text-color,$color-primary-2,14px,40vw,30px,black,4px);
+                @include button($main-text-color,$color-primary-2,$btn-FS,100%,5vmax,$color-primary-4,2px);
             }
             .card__title{
                 *{
@@ -153,6 +219,126 @@
     }
     // =========body
 
+
+    // ==================testimony============
+
+    .testimonyWrapper{
+
+        margin-bottom: 10vh;
+    }
+
+    .testimony{
+
+        display: grid;
+        grid-template-columns: 1fr;
+        border: 2px solid $color-primary-3;
+        padding: 10px;
+        border: 5px solid transparent;
+        border-top-color: white;
+        border-radius: 20px;
+        // background-color: rgba(46, 90, 235, 0.829);
+        background: -webkit-linear-gradient(312deg, #4abcfe 36%, #AAA7F6 100%);
+        // background-image: url("../assets/images/pic.png");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-clip: content-box;
+        background-blend-mode: multiply;
+        padding: 7px;
+        background: linear-gradient(229deg, #f2659b, #02bcc6);
+        background-size: 400% 400%;
+        animation:colorAnimate 6s ease infinite;
+
+
+        
+        &__img{
+            grid-row: 2;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            margin: 0px;
+            padding: 10px;
+            
+            
+
+            span{
+                color: white;
+                padding: 0px;
+                margin: 20px;
+                font-weight: bold;
+
+                
+            }
+            
+            img{
+                width: 20vw;
+                border-radius: 50%;
+                background-color: rgb(0, 162, 255);
+                margin: 0px;
+                padding: 0px;
+                border: 2px dashed white;
+                animation-name: rotate;
+                animation-duration: 4s;
+                animation-delay: 1s;
+                animation-iteration-count: infinite;
+                animation-timing-function: linear;
+                
+            }
+        }
+
+
+        &::before{
+            
+            content: "";
+            background-color: rgb(255, 255, 255);
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            position:absolute;
+            // transform: translateY(36px) translateX(-40px);
+        }
+
+        // &::after{
+            
+        //     content: "";
+        //     background-color: rgb(255, 255, 255);
+        //     height: 10px;
+        //     width: 10px;
+        //     border-radius: 50%;
+        //     position:absolute;
+        //     transform: translateY(45vh);
+        // }
+
+        &__text{
+            padding: 10px;
+            padding-bottom: 0px;
+            margin: 0px;
+            p{
+                margin: 10px;
+                user-select: none;
+                
+            }
+
+            
+        }
+    }
+
+
+    #testimonySeparator{
+        width: .1px;
+        border: 2px solid transparent;
+        height: 120px;
+        // transform: translateX(-110px);
+        background-color: white;
+        
+    }
+
+
+
+    /*===============testimony section end*/
+
+
+
     .footer{
         display: grid;
         grid-template-columns: repeat(4,1fr);
@@ -177,6 +363,7 @@
                 margin: 0px;
                 font-size: 1rem;
                 display: none;
+
             }   
         }
     }
