UI interface Updating

--- a/styles/_varibles.scss
+++ b/styles/_varibles.scss
@@ -46,7 +46,25 @@ body {
     }
 
     
+h7{
 
+    font-size: 1.7rem;
+    font-weight: bold;
+    display: none;
+    color: $color-primary-4;
+
+}
+
+
+    intro{
+        color: $color-primary-4;
+        font-size: 1.8rem;
+        font-weight: bold;
+        text-align: center;
+        padding: 25px;
+        border: 2px solid transparent;
+        border-bottom-color: $color-primary-4;
+    }
 
 
 
