--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,3 @@
-/*display Grid*/
-/*display Grid function*/
-/*display Flex function*/
-/*display Grid function*/
-/* 
-===============
-button component
-===============
-*/
-/* button endcomponent*/
-/* 
-==============
-card component
-==============
-*/
-/* 
-==============
-card end component
-==============
-*/
-/* 
-==============
-content card component
-==============
-*/
-/* 
-==============
-content card end component
-==============
-*/
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500");
 html,
 body {
@@ -56,6 +26,23 @@ h6 {
 p {
   color: white;
   font-size: 1.1rem;
+}
+
+h7 {
+  font-size: 1.7rem;
+  font-weight: bold;
+  display: none;
+  color: #050D2A;
+}
+
+intro {
+  color: #050D2A;
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 25px;
+  border: 2px solid transparent;
+  border-bottom-color: #050D2A;
 }
 
 @-webkit-keyframes rotate {
@@ -112,6 +99,36 @@ p {
   }
 }
 
+/*display Grid*/
+/*display Grid function*/
+/*display Flex function*/
+/*display Grid function*/
+/* 
+===============
+button component
+===============
+*/
+/* button endcomponent*/
+/* 
+==============
+card component
+==============
+*/
+/* 
+==============
+card end component
+==============
+*/
+/* 
+==============
+content card component
+==============
+*/
+/* 
+==============
+content card end component
+==============
+*/
 @media screen and (max-width: 920px) {
   body {
     background-color: #f5fcff;
@@ -169,11 +186,16 @@ p {
   section.head {
     display: -ms-grid;
     display: grid;
-    background-color: #050D2A;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
     /*======head end====*/
   }
   section.head nav {
-    background-color: white;
+    background-color: #050D2A;
+    position: fixed;
+    width: 100%;
+    z-index: 10000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -190,7 +212,7 @@ p {
   }
   section.head nav logo h4 {
     color: transparent;
-    margin: 5px;
+    margin: 2px;
     background: linear-gradient(229deg, #f2659b, #02bcc6);
     background: linear-gradient(229deg, #f2659b, #02bcc6);
     background-size: 400% 400%;
@@ -207,6 +229,7 @@ p {
     /*<---profile description---*/
   }
   section.head profile profileImage {
+    color: #050D2A;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr;
@@ -216,10 +239,9 @@ p {
   section.head profile profileImage img {
     margin: 30px;
     display: block;
-    width: 80%;
-    max-width: 55%;
+    width: 10% 0%;
+    max-width: 90%;
     max-height: 99%;
-    border-radius: 50%;
   }
   section.head profile profile_desc {
     display: -ms-grid;
@@ -227,6 +249,7 @@ p {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     justify-items: center;
+    color: #050D2A;
   }
   section.head profile profile_desc name * {
     margin-top: 0px;
@@ -238,6 +261,7 @@ p {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     justify-items: center;
+    color: #050D2A;
   }
   section.head profile profile_desc desc socialmedia {
     display: -webkit-box;
@@ -249,7 +273,7 @@ p {
             flex-direction: column;
   }
   section.head profile profile_desc desc socialmedia a {
-    color: white;
+    color: #050D2A;
     font-size: 5vmax;
     text-decoration: none;
   }
@@ -393,9 +417,9 @@ p {
   }
   section.body projects Projectcard.card .card__img img {
     image-rendering: optimizeSpeed;
-    width: 99%;
-    max-width: 99%;
-    max-height: 90%;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     display: block;
     -o-object-position: center;
        object-position: center;
@@ -425,7 +449,10 @@ p {
     margin: 10px;
   }
   section.body projects Projectcard.card .card__img {
-    padding: 2px;
+    padding: 0px;
+    width: 100%;
+    margin: 0px;
+    max-width: 100%;
   }
   section.body projects Projectcard.card .card__title * {
     margin: 0px;
@@ -465,17 +492,8 @@ p {
     border: 5px solid transparent;
     border-top-color: white;
     border-radius: 20px;
-    background: -webkit-linear-gradient(312deg, #4abcfe 36%, #AAA7F6 100%);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-clip: content-box;
-    background-blend-mode: multiply;
     padding: 7px;
-    background: linear-gradient(229deg, #f2659b, #02bcc6);
-    background-size: 400% 400%;
-    -webkit-animation: colorAnimate 6s ease infinite;
-            animation: colorAnimate 6s ease infinite;
+    background-color: #517291;
   }
   .testimony__img {
     -ms-grid-row: 2;
@@ -528,6 +546,7 @@ p {
     padding: 10px;
     padding-bottom: 0px;
     margin: 0px;
+    color: red;
   }
   .testimony__text p {
     margin: 10px;
@@ -535,6 +554,14 @@ p {
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
+  }
+  .testimony__text p::before {
+    content: "\"";
+    font-size: 10vmax;
+    position: absolute;
+    -webkit-transform: translateY(120px);
+            transform: translateY(120px);
+    font-family: cursive;
   }
   #testimonySeparator {
     width: .1px;
