--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
+@import "varibles";
 @import "../node_modules/easyscss-kevin/components/functions";
 @import "../node_modules/easyscss-kevin/components/components";
-@import "varibles";
+
 
 @media screen and (max-width:920px){
 
@@ -60,10 +61,19 @@
     /*======head====*/
     section.head{
         display: grid;
-        background-color: $color-primary-4;
+        background-color: white;
+
+        // background-image: url("../assets/images/bg-19.svg");
+        background-repeat: no-repeat;
+        // background-size: contain;
+        background-position: center;
+
     // navigation bar
     nav{
-        background-color: $main-text-color;
+        background-color: $color-primary-4;
+        position: fixed;
+        width: 100%;
+        z-index: 10000;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -71,7 +81,7 @@
             padding: 0px;
             h4{
                 color: transparent;
-                margin: 5px;
+                margin: 2px;
                 background: linear-gradient(229deg, #f2659b, #02bcc6);
                 background: linear-gradient(229deg, #f2659b, #02bcc6);
                 background-size: 400% 400%;
@@ -89,16 +99,18 @@
         /*<---profileImage---*/
         profileImage{
 
+            color: $color-primary-4;
             display: grid;
             grid-template-columns: 1fr;
             justify-items: center;
             img{
                 margin: 30px;
                 display: block;
-                width: 80%;
-                max-width: 55%;
+                width: 10%0%;
+                max-width: 90%;
                 max-height: 99%;
-                border-radius: 50%;
+                // border-radius: 50%;
+                // background: white;
             }
 
         }/*<---profileImage end---*/
@@ -110,6 +122,7 @@
             display: grid;
             grid-template-columns: 1fr;
             justify-items: center;
+            color: $color-primary-4;
             
             name{
                 
@@ -124,12 +137,13 @@
                 display: grid;
                 grid-template-columns: 1fr;
                 justify-items: center;
+                color: $color-primary-4;
 
                 socialmedia{
                     display: flex;
                     flex-direction: column;
                     a{
-                        color: $main-text-color;
+                        color: $color-primary-4;
                         font-size: 5vmax;
                         text-decoration: none;
                     }
@@ -194,7 +208,10 @@
                 @include Card($color-primary-3);
 
                 .card__img{
-                    padding: 2px;
+                    padding: 0px;
+                    width: 100%;
+                    margin: 0px;
+                    max-width: 100%;
                 }
                 .card__title{
                     *{
@@ -236,18 +253,11 @@
         border: 5px solid transparent;
         border-top-color: white;
         border-radius: 20px;
-        // background-color: rgba(46, 90, 235, 0.829);
-        background: -webkit-linear-gradient(312deg, #4abcfe 36%, #AAA7F6 100%);
-        // background-image: url("../assets/images/pic.png");
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-clip: content-box;
-        background-blend-mode: multiply;
         padding: 7px;
-        background: linear-gradient(229deg, #f2659b, #02bcc6);
-        background-size: 400% 400%;
-        animation:colorAnimate 6s ease infinite;
+        background-color: rgb(81, 114, 145);
+        
+        
+        
 
 
         
@@ -313,9 +323,22 @@
             padding: 10px;
             padding-bottom: 0px;
             margin: 0px;
+            color: red;
             p{
                 margin: 10px;
                 user-select: none;
+                
+                
+                &::before{
+
+                    content: "\"";
+                    font-size: 10vmax;
+                    position: absolute;
+                    transform: translateY(120px);
+                    font-family: cursive;
+                }
+
+
                 
             }
 
