--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,21 @@ content card end component
 ==============
 */
 @media screen and (max-width: 920px) {
+  .about_me img {
+    width: 70% !important;
+    padding: 50px;
+    z-index: 1000;
+    border-radius: 20px !important;
+  }
+  .about_me::before {
+    position: absolute;
+    content: "";
+    width: 60%;
+    height: 50%;
+    -webkit-transform: translateX(30px) translateY(20px);
+            transform: translateX(30px) translateY(20px);
+    border: 5px solid white;
+  }
   body {
     background-color: #f5fcff;
   }
@@ -220,7 +235,7 @@ content card end component
             animation: colorAnimate 6s ease infinite;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
   section.head profile {
     /*<---profileImage---*/
@@ -573,8 +588,8 @@ content card end component
   .footer {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
     position: fixed;
     width: 100%;
     bottom: 0px;
@@ -598,8 +613,7 @@ content card end component
   }
   .footer__link span:nth-child(2) {
     margin: 0px;
-    font-size: 1rem;
-    display: none;
+    font-size: .8rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
