--- a/mobile/style.css
+++ b/mobile/style.css
@@ -103,10 +103,6 @@ intro {
   }
 }
 
-/*display Grid*/
-/*display Grid function*/
-/*display Flex function*/
-/*display Grid function*/
 /* 
 ===============
 button component
@@ -133,12 +129,29 @@ content card component
 content card end component
 ==============
 */
-@media screen and (max-width: 920px) {
+/*display Grid*/
+/*display Grid function*/
+/*display Flex function*/
+/*display Grid function*/
+/* Portrait and Landscape */
+@media only screen and (max-width: 812px) {
+  #navbar {
+    display: none;
+  }
   .about_me img {
     width: 70% !important;
     padding: 50px;
-    z-index: 10;
+    z-index: 1000;
     border-radius: 20px !important;
+  }
+  .about_me::before {
+    position: absolute;
+    content: "";
+    width: 60%;
+    height: 50%;
+    -webkit-transform: translateX(30px) translateY(20px);
+            transform: translateX(30px) translateY(20px);
+    border: 5px solid white;
   }
   .about_me::before {
     position: absolute;
@@ -619,6 +632,9 @@ content card end component
   .footer__link span:nth-child(2) {
     margin: 0px;
     font-size: .8rem;
+  }
+  .callToAction {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
